--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Django==3.1.2
 django-bootstrap4==2.2.0
 django-tables2==2.3.1
 django-filter==2.4.0
-psycopg2==2.8.6
+psycopg2-binary==2.8.6
 python-dateutil==2.8.1
