--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -27,6 +27,7 @@ pylint:
   options:
     max-line-length: 120
     max-parents: 12
+    django-settings-module: SBtools.settings.development
 
 pep8:
   options:
