--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==4.0.1
 django-bootstrap5==21.3
 django-tables2==2.4.1
 django-filter==21.1
+django-ratelimit==3.0.1
 psycopg2==2.9.3
 python-dateutil==2.8.2
 timeago==1.0.15
