Switch prospector to ruff, add requirements-dev.txt

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,9 +1,7 @@
 [mypy]
 plugins =
     mypy_django_plugin.main
+mypy_path = ./stubs
 
 [mypy.plugins.django-stubs]
 django_settings_module = "SBtools.settings.development"
-
-[mypy-*.migrations.*]
-ignore_errors = True
